--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
         body {
             margin: 0;
             font-family: 'Arial', sans-serif;
-            background-color: #f5f5f5;
+            background-color: #f8f1f8;
         }
 
         .header {
-            background: linear-gradient(45deg, #2c3e50, #3498db);
+            background: linear-gradient(45deg, #4a154b, #9d2449);
             color: white;
             text-align: center;
             padding: 2rem;
@@ -79,7 +79,7 @@
         }
 
         .add-to-cart {
-            background: #3498db;
+            background: #9d2449;
             color: white;
             border: none;
             padding: 0.8rem 1.5rem;
@@ -92,11 +92,11 @@
         }
 
         .add-to-cart:hover {
-            background: #2980b9;
+            background: #7c1c3a;
         }
 
         .footer {
-            background: #2c3e50;
+            background: #4a154b;
             color: white;
             text-align: center;
             padding: 2rem;
@@ -112,10 +112,10 @@
 
     <div class="products-grid">
         <div class="product-card">
-            <img src="path_to_your_image.jpg" alt="Cinnamon Blast Toothpicks" class="product-image">
+            <img src="https://i.ibb.co/k7FhTVC/DALL-E-2025-03-17-19-43-25-A-vibrant-modern-packaging-design-for-flavored-toothpicks-inspired-by-tre.png" alt="B.I.G Berries Toothpicks" class="product-image">
             <div class="product-info">
-                <h2 class="product-title">Cinnamon Blast</h2>
-                <p class="product-description">Experience the intense warmth of premium cinnamon-infused toothpicks. Perfect for after meals or anytime you need a spicy kick.</p>
+                <h2 class="product-title">B.I.G Berries</h2>
+                <p class="product-description">Indulge in the sweet and tangy flavor of mixed berries. A perfect blend of strawberry, blueberry, and raspberry essences.</p>
                 <div class="product-price">$7.99</div>
                 <button class="add-to-cart">Add to Cart</button>
             </div>
